--- a/_defaults.scss
+++ b/_defaults.scss
@@ -101,7 +101,7 @@ hr {
 //    By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
 //    margin for easier control within type scales as it avoids margin collapsing.
 
-%heading {
+//%heading {
     //margin-top: 0; // 1
     //margin-bottom: $headings-margin-bottom;
     //font-family: $headings-font-family;
@@ -109,37 +109,37 @@ hr {
     //font-weight: $headings-font-weight;
     //line-height: $headings-line-height;
     //color: var(--#{$prefix}heading-color);
-}
-
-h1 {
-    @extend %heading;
-    @include font-size($h1-font-size);
-}
-
-h2 {
-    @extend %heading;
-    @include font-size($h2-font-size);
-}
-
-h3 {
-    @extend %heading;
-    @include font-size($h3-font-size);
-}
-
-h4 {
-    @extend %heading;
-    @include font-size($h4-font-size);
-}
-
-h5 {
-    @extend %heading;
-    @include font-size($h5-font-size);
-}
-
-h6 {
-    @extend %heading;
-    @include font-size($h6-font-size);
-}
+//}
+//
+//h1 {
+//    @extend %heading;
+//    @include font-size($h1-font-size);
+//}
+//
+//h2 {
+//    @extend %heading;
+//    @include font-size($h2-font-size);
+//}
+//
+//h3 {
+//    @extend %heading;
+//    @include font-size($h3-font-size);
+//}
+//
+//h4 {
+//    @extend %heading;
+//    @include font-size($h4-font-size);
+//}
+//
+//h5 {
+//    @extend %heading;
+//    @include font-size($h5-font-size);
+//}
+//
+//h6 {
+//    @extend %heading;
+//    @include font-size($h6-font-size);
+//}
 
 @include mx.headings-typography(vars.$typography, $use-rfs-typography);
 
