update wp core hr

--- a/_wp-core.scss
+++ b/_wp-core.scss
@@ -21,7 +21,7 @@ $hr-separator-spacing-y: 2rem !default;
         //}
 
         hr.wp-block-separator {
-            display: inline-block;
+            //display: inline-block;
             width: 100%;
             height: 2px;
             border: none;
