--- a/_wp-core.scss
+++ b/_wp-core.scss
@@ -7,6 +7,7 @@
 $post-content-img-spacing-x: 1rem !default;
 $post-content-img-spacing-y: 0.5rem !default;
 $hr-separator-spacing-y: 2rem !default;
+$mobile-breakpoint: vars.$mobile;
 
 /**
  * Frontend WP Gutenberg block styles.
@@ -443,6 +444,86 @@ $hr-separator-spacing-y: 2rem !default;
                 @include mx.generate-rfs-properties-from($typography, h-#{$i});
             } @else {
                 @include mx.generate-properties-from($typography, h-#{$i});
+            }
+        }
+    }
+}
+
+@mixin wp-block-button-styles(
+    $buttons,
+    $buttons-hover: false,
+    $buttons-active: false,
+    $buttons-mobile: (),
+    $button-default-key: false) {
+    .wp-block-button {
+        // Default button styles. Separate styles also should be create based on theme-block-editor.js.
+        &__link {
+            @if $button-default-key {
+                @include mx.generate-properties-from($buttons, $button-default-key);
+            }
+
+            &:hover, &:focus {
+                @if $button-default-hover-key {
+                    @include mx.generate-properties-from($buttons, $button-default-hover-key);
+                }
+            }
+
+            &:active {
+                @if $button-default-active-key {
+                    @include mx.generate-properties-from($buttons, $button-default-active-key);
+                }
+            }
+        }
+
+        @each $key, $value in $buttons {
+            &.is-style-#{$key} {
+                .wp-block-button__link {
+                    @extend %button-#{$key};
+
+                    &:hover, &:focus {
+                        @extend %button-hover-#{$key};
+                    }
+
+                    &:active {
+                        @extend %button-active-#{$key};
+                    }
+                }
+            }
+        }
+
+        @include mx.breakpoint-max($mobile-breakpoint) {
+            @each $key, $value in $buttons-mobile {
+                &.is-style-#{$key} {
+                    .wp-block-button__link {
+                        @include mx.generate-properties-from($buttons-mobile, $key);
+                    }
+                }
+            }
+        }
+    }
+}
+
+// For single default style.
+@mixin wp-block-button(
+    $buttons,
+    $button-key,
+    $buttons-hover: false,
+    $buttons-active: false) {
+    // Default button styles. Separate styles also should be create based on theme-block-editor.js.
+    .wp-block-button {
+        &__link {
+            @include mx.generate-properties-from($buttons, $button-key);
+
+            &:hover, &:focus {
+                @if $buttons-hover {
+                    @include mx.generate-properties-from($buttons-hover, $button-key);
+                }
+            }
+
+            &:active {
+                @if $buttons-active {
+                    @include mx.generate-properties-from($buttons-active, $button-key);
+                }
             }
         }
     }
