--- a/_mixins.scss
+++ b/_mixins.scss
@@ -76,7 +76,12 @@ $all-text-inputs: join($_text-inputs-list, ', ');
     }
 
     &:after {
+        visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: " ";
         clear: both;
+        height: 0;
     }
 }
 
