--- a/_helpers.scss
+++ b/_helpers.scss
@@ -6,6 +6,17 @@
     display: none !important;
 }
 
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+.clearfix { display: inline-block; }
+
 .align-center {
     text-align: center;
 }
