updates navigation sub items hover styles

--- a/_features.scss
+++ b/_features.scss
@@ -182,18 +182,16 @@
 }
 
 // Works with Masonry JS library
-@mixin enable-masonry-listing($columns, $item-spacing-x, $item-spacing-y) {
-    .masonry {
-        display: flex;
-        flex-wrap: wrap;
-        position: relative;
+@mixin masonry-listing-styles($columns, $item-spacing-x, $item-spacing-y) {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
 
-        > .post {
-            padding: 0 $item-spacing-x;
-            margin-bottom: $item-spacing-y;
-            width: calc(100% / $columns);
-            display: inline-flex;
-            flex-direction: column;
-        }
+    > .post {
+        padding: 0 $item-spacing-x;
+        margin-bottom: $item-spacing-y;
+        width: calc(100% / $columns);
+        display: inline-flex;
+        flex-direction: column;
     }
 }
