--- a/_wp-core.scss
+++ b/_wp-core.scss
@@ -4,8 +4,16 @@
 @use "mixins" as mx;
 @import "bootstrap-required";
 
+$post-content-max-width: if($post-content-max-width, $post-content-max-width, false);
+$post-content-spacing-x: if($post-content-spacing-x, $post-content-spacing-x, 1rem);
+$post-content-spacing-y: if($post-content-spacing-y, $post-content-spacing-y, 0);
+
 $post-content-img-spacing-x: 1rem !default;
 $post-content-img-spacing-y: 0.5rem !default;
+
+$breakout-content-max-width: if($breakout-content-max-width, $breakout-content-max-width, $post-content-max-width);
+$breakout-content-spacing-x: if($breakout-content-spacing-x, $breakout-content-spacing-x, $post-content-spacing-x);
+
 $hr-separator-spacing-y: 2rem !default;
 $mobile-breakpoint: vars.$mobile;
 
@@ -68,13 +76,24 @@ $mobile-breakpoint: vars.$mobile;
         }
 
         .alignwide {
-            @include margin-left(calc((rfs-value(vars.$post-content-max-width) - rfs-value(vars.$breakout-content-max-width)) / 2) !important);
-            @include margin-right(calc((rfs-value(vars.$post-content-max-width) - rfs-value(vars.$breakout-content-max-width)) / 2) !important);
+            @include margin-left(calc((rfs-value($post-content-max-width) - rfs-value($breakout-content-max-width)) / 2));
+            @include margin-right(calc((rfs-value($post-content-max-width) - rfs-value($breakout-content-max-width)) / 2));
+
+            $_actual-margin-x: calc($breakout-content-spacing-x * -1);
+            $_screen_width_bp: calc($breakout-content-max-width + #{$_actual-margin-x});
+
+            @include mx.breakpoint-max($_screen_width_bp) { // When screen width is less than the breakout-content-max-width + margins.
+                @include mx.margin-left(calc(($post-content-max-width - var(--full-width)) / 2 + $_actual-margin-x));
+                @include mx.margin-right(calc(($post-content-max-width - var(--full-width)) / 2 + $_actual-margin-x));
+            }
+
+            @include mx.breakpoint-max($post-content-max-width) { /* Adjust based on the parent container's width */
+                margin-left: $_actual-margin-x;
+                margin-right: $_actual-margin-x;
+            }
         }
 
         .alignfull {
-            //margin-left: calc(-100vw / 2 + 100% / 2);
-            //margin-right: calc(-100vw / 2 + 100% / 2);
             margin-left: calc((var(--half-width) - 50%) * -1);
             margin-right: calc((var(--half-width) - 50%) * -1);
 
@@ -132,7 +151,7 @@ $mobile-breakpoint: vars.$mobile;
         // Groups:
         .wp-block-group {
             &__inner-container {
-                max-width: rfs-value(vars.$post-content-max-width);
+                max-width: rfs-value($post-content-max-width);
                 margin: 0 auto;
                 //padding-right: calc(#{$container-padding-x} * .5);
                 //padding-left: calc(#{$container-padding-x} * .5);
@@ -154,7 +173,7 @@ $mobile-breakpoint: vars.$mobile;
 
         // Custom containers.
         .wp-block-inner-container {
-            max-width: rfs-value(vars.$post-content-max-width);
+            max-width: rfs-value($post-content-max-width);
             margin: 0 auto;
             //padding-right: calc(#{$container-padding-x} * .5);
             //padding-left: calc(#{$container-padding-x} * .5);
@@ -417,8 +436,8 @@ $mobile-breakpoint: vars.$mobile;
 
 @mixin enable-wp-editor-align-full() {
     > .alignwide {
-        @include margin-left(calc((rfs-value(vars.$post-content-max-width) - rfs-value(vars.$breakout-content-max-width)) / 2));
-        @include margin-right(calc((rfs-value(vars.$post-content-max-width) - rfs-value(vars.$breakout-content-max-width)) / 2));
+        @include margin-left(calc((rfs-value($post-content-max-width) - rfs-value(vars.$breakout-content-max-width)) / 2));
+        @include margin-right(calc((rfs-value($post-content-max-width) - rfs-value(vars.$breakout-content-max-width)) / 2));
     }
 
     > .alignfull {
